--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
-name: Deploy to Railway
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - master  # 当推送到 main 分支时触发
+      - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,27 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: 安装 Rust
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+      # Step 2: 登录 Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          toolchain: stable
-          override: true
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: 构建项目
-      - name: Build project
+      # Step 3: 构建并推送 Docker 镜像
+      - name: Build and push Docker image
         run: |
-          cargo build --release
-
-      # Step 4: 安装 Railway CLI
-      - name: Install Railway CLI
-        run: |
-          curl -fsSL https://railway.app/install.sh | sh
-          export PATH="$HOME/.railway/bin:$PATH"
-
-      # Step 5: 部署到 Railway
-      - name: Deploy to Railway
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: |
-          railway up --ci --service rust-api-service
+          docker build -t dockerbyjason/rust-api-server:latest .
+          docker push dockerbyjason/rust-api-server:latest
