--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,8 @@ jobs:
       # Step 3: 构建并推送 Docker 镜像
       - name: Build and push Docker image
         run: |
-          docker build -t dockerbyjason/rust-api-server:latest .
-          docker push dockerbyjason/rust-api-server:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/rust-api-server:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/rust-api-server:latest
+
+      - name: Deploy to Railway
+        run: railway deploy --image ${{ secrets.DOCKER_USERNAME }}/rust-api-server:latest --token ${{ secrets.RAILWAY_TOKEN }}
