--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,13 @@
 [package]
-name = "rust-api-server"
+name = "delta-x-bot"
 version = "0.1.0"
 edition = "2021"
 
-#[dependencies]
-#reqwest = { version = "0.11", features = ["blocking", "json"] }
-#dotenv = "0.15.0"
-#serde = { version = "1.0.214", features = ["derive"] }
-#serde_json = "1.0.132"
-#once_cell = "1.9.0"
-
-
-
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-axum = "0.6"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+octocrab = "0.32"
+twitter-v2 = "0.1"
+tokio = { version = "1.36", features = ["full"] }
+dotenv = "0.15"
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
